k8s/django.yml
kind: Service
apiVersion: v1
metadata:
  name: django-app
  namespace: notes-app
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: django
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      name: django
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: aniket1112000/django-notes-app-main-django-app:latest
        ports:
        - containerPort: 8000
