k8s/mysql.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: notes-app
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3307
    targetPort: 3306

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: sql
  namespace: notes-app
spec:
  replicas: 1
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-storage
