k8s/nginxIngress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: notesingress
  namespace: notes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
